--- a/web/src/app/laboratory/gomoku.html
+++ b/web/src/app/laboratory/gomoku.html
@@ -281,7 +281,7 @@
     <div class="main-content">
         <div class="chessboard"></div>
         <div class="options">
-            <div class="mode">双人</div>
+            <div class="mode">人机</div>
             <div class="restart">重新开始</div>
             <div class="undo">悔棋</div>
         </div>
@@ -297,7 +297,7 @@
             turnTo = 'black',  // 轮到的下棋方
             winnerLock = false,
             cacheData = [],
-            mode = 1; // 1 双人 2 人机
+            mode = 2; // 1 双人 2 人机
 
         for (var i = 0; i < boardSize; i++) {
             chessData[i] = new Array(boardSize);
@@ -425,96 +425,96 @@
 
             if (col !== 0) {
                 // 左
-                for (var a = 1; chessData[row][col - a] === now; a++) {
+                for (var a = 1; col >= a && chessData[row][col - a] === now; a++) {
                     p1++;
 
                     var nextA = a + 1;
 
-                    if (chessData[row][col - nextA] === notNow) {
+                    if (col >= nextA && chessData[row][col - nextA] === notNow) {
                         p1 = p1 + 0.3;
                     }
                 }
             }
             if (row !== 0 && col !== 0) {
                 // 左上
-                for (var b = 1; chessData[row - b][col - b] === now; b++) {
+                for (var b = 1; row >= b && col >= b && chessData[row - b][col - b] === now; b++) {
                     p2++;
 
                     var nextB = b + 1;
 
-                    if (chessData[row - nextB][col - nextB] === notNow) {
+                    if (row >= nextB && col >= nextB && chessData[row - nextB][col - nextB] === notNow) {
                         p2 = p2 + 0.3;
                     }
                 }
             }
             if (row !== 0) {
                 // 上
-                for (var c = 1; chessData[row - c][col] === now; c++) {
+                for (var c = 1; row >= c && chessData[row - c][col] === now; c++) {
                     p3++;
 
                     var nextC = c + 1;
 
-                    if (chessData[row - nextC][col] === notNow) {
+                    if (row >= nextC && chessData[row - nextC][col] === notNow) {
                         p3 = p3 + 0.3;
                     }
                 }
             }
             if (row !== 0 && col !== boardSize - 1) {
                 // 右上
-                for (var d = 1; chessData[row - d][col + d] === now; d++) {
+                for (var d = 1; row >= d && col + d < boardSize && chessData[row - d][col + d] === now; d++) {
                     p4++;
 
                     var nextD = d + 1;
 
-                    if (chessData[row - nextD][col + nextD] === notNow) {
+                    if (row >= nextD && col + nextD < boardSize && chessData[row - nextD][col + nextD] === notNow) {
                         p4 = p4 + 0.3;
                     }
                 }
             }
             if (col !== boardSize - 1) {
                 // 右
-                for (var e = 1; chessData[row][col + e] === now; e++) {
+                for (var e = 1; col + e < boardSize && chessData[row][col + e] === now; e++) {
                     p1++;
 
                     var nextE = e + 1;
 
-                    if (chessData[row][col + nextE] === notNow) {
+                    if (col + nextE < boardSize && chessData[row][col + nextE] === notNow) {
                         p1 = p1 + 0.3;
                     }
                 }
             }
             if (row !== boardSize - 1 && col !== boardSize - 1) {
                 // 右下
-                for (var f = 1; chessData[row + f][col + f] === now; f++) {
+                for (var f = 1; row + f < boardSize && col + f < boardSize && chessData[row + f][col + f] === now; f++) {
                     p2++;
 
                     var nextF = f + 1;
 
-                    if (chessData[row + nextF][col + nextF] === notNow) {
+                    if (row + nextF < boardSize && col + nextF < boardSize && chessData[row + nextF][col + nextF] === notNow) {
                         p2 = p2 + 0.3;
                     }
                 }
             }
             if (row !== boardSize - 1) {
                 // 下
-                for (var g = 1; chessData[row + g][col] === now; g++) {
+                for (var g = 1; row + g < boardSize && chessData[row + g][col] === now; g++) {
                     p3++;
 
                     var nextG = g + 1;
 
-                    if (chessData[row + nextG][col] === notNow) {
+                    if (row + nextG < boardSize && chessData[row + nextG][col] === notNow) {
                         p3 = p3 + 0.3;
                     }
                 }
             }
             if (row !== boardSize - 1 && col !== 0) {
                 // 左下
-                for (var h = 1; chessData[row + h][col - h] === now; h++) {
+                for (var h = 1; col >= h && row + h < boardSize && chessData[row + h][col - h] === now; h++) {
                     p4++;
 
-                    var nextF = f + 1;
+                    var nextH = h + 1;
 
-                    if (chessData[row + nextF][col - nextF] === notNow) {
+                    if (col >= nextH && row + nextH < boardSize && chessData[row + nextH][col - nextH] === notNow) {
                         p4 = p4 + 0.3;
                     }
                 }
@@ -586,62 +586,120 @@
                     if (result === 0) {
                         var black_p = setScore(1, row, col),
                             white_p = setScore(2, row, col),
-                            score = 0;
+                            score = 0,
+                            bp1 = black_p.p1,
+                            bp2 = black_p.p2,
+                            bp3 = black_p.p3,
+                            bp4 = black_p.p4,
+                            wp1 = white_p.p1,
+                            wp2 = white_p.p2,
+                            wp3 = white_p.p3,
+                            wp4 = white_p.p4;
 
-                        // 人5子
-                        if (black_p.p1 >= 4 || black_p.p2 >= 4 || black_p.p3 >= 4 || black_p.p4 >= 4) {
-                            score += 100;
+                        // 5子
+                        if (bp1 >= 4 || bp2 >= 4 || bp3 >= 4 || bp4 >= 4) {
+                            score += 100000;
                         }
-                        // AI5子
-                        if (white_p.p1 >= 4 || white_p.p2 >= 4 || white_p.p3 >= 4 || white_p.p4 >= 4) {
+
+                        if (wp1 >= 4 || wp2 >= 4 || wp3 >= 4 || wp4 >= 4) {
+                            score += 110000;
+                        }
+
+                        // 活四 || 双死四 || 死四活三
+                        if ((bp1 === 3 || bp2 === 3 || bp3 === 3 || bp4 === 3) || (bp1 + bp2 === 6.6 || bp1 + bp3 === 6.6 || bp1 + bp4 === 6.6 || bp2 + bp3 === 6.6 || bp2 + bp4 === 6.6 || bp3 + bp4 === 6.6) || ((bp1 === 3.3 || bp2 === 3.3 || bp3 === 3.3 || bp4 === 3.3) && (bp1 === 2 || bp2 === 2 || bp3 === 2 || bp4 === 2))) {
+                            score += 10000;
+                        }
+
+                        if ((wp1 === 3 || wp2 === 3 || wp3 === 3 || wp4 === 3) || (wp1 + wp2 === 6.6 || wp1 + wp3 === 6.6 || wp1 + wp4 === 6.6 || wp2 + wp3 === 6.6 || wp2 + wp4 === 6.6 || wp3 + wp4 === 6.6) || ((wp1 === 3.3 || wp2 === 3.3 || wp3 === 3.3 || wp4 === 3.3) && (wp1 === 2 || wp2 === 2 || wp3 === 2 || wp4 === 2))) {
+                            score += 11000;
+                        }
+
+                        // 双活三
+                        if (bp1 + bp2 === 4 || bp1 + bp3 === 4 || bp1 + bp4 === 4 || bp2 + bp3 === 4 || bp2 + bp4 === 4 || bp3 + bp4 === 4) {
+                            score += 5000;
+                        }
+
+                        if (wp1 + wp2 === 4 || wp1 + wp3 === 4 || wp1 + wp4 === 4 || wp2 + wp3 === 4 || wp2 + wp4 === 4 || wp3 + wp4 === 4) {
+                            score += 5100;
+                        }
+
+                        // 死三活三
+                        if ((bp1 === 2.3 || bp2 === 2.3 || bp3 === 2.3 || bp4 === 2.3) && (bp1 === 2 || bp2 === 2 || bp3 === 2 || bp4 === 2)) {
+                            score += 1000;
+                        }
+
+                        if ((wp1 === 2.3 || wp2 === 2.3 || wp3 === 2.3 || wp4 === 2.3) && (wp1 === 2 || wp2 === 2 || wp3 === 2 || wp4 === 2)) {
+                            score += 1100;
+                        }
+
+                        // 死四
+                        if (bp1 === 3.3 || bp2 === 3.3 || bp3 === 3.3 || bp4 === 3.3) {
+                            score += 500;
+                        }
+
+                        if (wp1 === 3.3 || wp2 === 3.3 || wp3 === 3.3 || wp4 === 3.3) {
+                            score += 550;
+                        }
+
+                        // 单活三
+                        if (bp1 === 2 || bp2 === 2 || bp3 === 2 || bp4 === 2) {
                             score += 200;
                         }
-                        // 人5子
-                        if (black_p.p1 == 3 || black_p.p2 == 3 || black_p.p3 == 3 || black_p.p4 == 3) {
+
+                        if (wp1 === 2 || wp2 === 2 || wp3 === 2 || wp4 === 2) {
+                            score += 250;
+                        }
+
+                        // 双活二
+                        if (bp1 + bp2 === 2 || bp1 + bp3 === 2 || bp1 + bp4 === 2 || bp2 + bp3 === 2 || bp2 + bp4 === 2 || bp3 + bp4 === 2) {
+                            score += 100;
+                        }
+
+                        if (wp1 + wp2 === 2 || wp1 + wp3 === 2 || wp1 + wp4 === 2 || wp2 + wp3 === 2 || wp2 + wp4 === 2 || wp3 + wp4 === 2) {
+                            score += 100;
+                        }
+
+                        // 死三
+                        if (bp1 === 3.3 || bp2 === 3.3 || bp3 === 3.3 || bp4 === 3.3) {
                             score += 50;
                         }
-                        // AI5子
-                        if (white_p.p1 == 3 || white_p.p2 == 3 || white_p.p3 == 3 || white_p.p4 == 3) {
-                            score += 55;
+
+                        if (wp1 === 3.3 || wp2 === 3.3 || wp3 === 3.3 || wp4 === 3.3) {
+                            score += 50;
                         }
-                        // 人5子
-                        if (black_p.p1 >= 3 && black_p.p1 <=4 || black_p.p2 >= 3 && black_p.p2 <=4 || black_p.p3 >= 3 && black_p.p3 <=4 || black_p.p4 >= 3 && black_p.p4 <=4) {
-                            score += 30;
-                        }
-                        // AI5子
-                        if (white_p.p1 >= 3 && black_p.p1 <=4 || white_p.p2 >= 3 && black_p.p2 <=4 || white_p.p3 >= 3 && black_p.p3 <=4 || white_p.p4 >= 3 && black_p.p4 <=4) {
-                            score += 30;
-                        }
-                        // 人5子
-                        if (black_p.p1 == 2 || black_p.p2 == 2 || black_p.p3 == 2 || black_p.p4 == 2) {
+
+                        // 死二活二
+                        if ((bp1 === 2.3 || bp2 === 2.3 || bp3 === 2.3 || bp4 === 2.3) && (bp1 === 2 || bp2 === 2 || bp3 === 2 || bp4 === 2)) {
                             score += 10;
                         }
-                        // AI5子
-                        if (white_p.p1 == 2 || white_p.p2 == 2 || white_p.p3 == 2 || white_p.p4 == 2) {
-                            score += 15;
+
+                        if ((wp1 === 2.3 || wp2 === 2.3 || wp3 === 2.3 || wp4 === 2.3) && (wp1 === 2 || wp2 === 2 || wp3 === 2 || wp4 === 2)) {
+                            score += 10;
                         }
-                        // 人5子
-                        if (black_p.p1 >= 2 && black_p.p1 <=3 || black_p.p2 >= 2 && black_p.p2 <=3 || black_p.p3 >= 2 && black_p.p3 <=3 || black_p.p4 >= 2 && black_p.p4 <=3) {
-                            score += 8;
-                        }
-                        // AI5子
-                        if (white_p.p1 >= 2 && black_p.p1 <=3 || white_p.p2 >= 2 && black_p.p2 <=3 || white_p.p3 >= 2 && black_p.p3 <=3 || white_p.p4 >= 2 && black_p.p4 <=3) {
-                            score += 8;
-                        }
-                        // 人5子
-                        if (black_p.p1 == 1 || black_p.p2 == 1 || black_p.p3 == 1 || black_p.p4 == 1) {
-                            score += 2;
-                        }
-                        // AI5子
-                        if (white_p.p1 == 1 || white_p.p2 == 1 || white_p.p3 == 1 || white_p.p4 == 1) {
+
+                        // 活二
+                        if (bp1 === 2 || bp2 === 2 || bp3 === 2 || bp4 === 2) {
                             score += 5;
                         }
-                        // 人5子
-                        if (black_p.p1 >= 1 && black_p.p1 <=2 || black_p.p2 >= 1 && black_p.p2 <=2 || black_p.p3 >= 1 && black_p.p3 <=2 || black_p.p4 >= 1 && black_p.p4 <=2) {
+
+                        if (wp1 === 2 || wp2 === 2 || wp3 === 2 || wp4 === 2) {
+                            score += 5;
+                        }
+
+                        // 死二
+                        if (bp1 === 1.3 || bp2 === 1.3 || bp3 === 1.3 || bp4 === 1.3) {
+                            score += 3;
+                        }
+
+                        if (wp1 === 1.3 || wp2 === 1.3 || wp3 === 1.3 || wp4 === 1.3) {
+                            score += 3;
+                        }
+
+                        // 活一
+                        if (bp1 === 1 || bp2 === 1 || bp3 === 1 || bp4 === 1) {
                             score += 1;
                         }
-                        // AI5子
-                        if (white_p.p1 >= 1 && black_p.p1 <=2 || white_p.p2 >= 1 && black_p.p2 <=2 || white_p.p3 >= 1 && black_p.p3 <=2 || white_p.p4 >= 1 && black_p.p4 <=2) {
+                        if (wp1 === 1 || wp2 === 1 || wp3 === 1 || wp4 === 1) {
                             score += 1;
                         }
 
@@ -658,11 +716,12 @@
             cacheData.push([bestPoint.row, bestPoint.col]);
             checkWinner(2, bestPoint.row, bestPoint.col);
 
-            var target = document.querySelector('[data-main="' + bestPoint.row + '-' + bestPoint.col + '"]');
+            if (winnerLock) {
+                var target = document.querySelector('[data-main="' + bestPoint.row + '-' + bestPoint.col + '"]');
 
-            target.className = target.className + ' white';
-            turnTo = 'black';
-//            console.log(bestPoint);
+                target.className = target.className + ' white';
+                turnTo = 'black';
+            }
         }
     })();
 
