--- a/web/src/app/css/home.less
+++ b/web/src/app/css/home.less
@@ -281,6 +281,9 @@
             text-align: center;
             padding-top: 80px;
             color: rgba(255, 255, 255, 0.541176);
+            a {
+                color: rgba(255, 255, 255, 0.541176);
+            }
             .footer-content-github {
                 margin: 10px 0 30px 0;
                 span {
